// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render component of a specified size 1`] = `
<div>
  <span
    class="jsx-377499007 avatar "
  >
    <span
      class="jsx-377499007 avatar-text"
    />
  </span>
</div>
`;

exports[`Avatar should render correctly 1`] = `
<div>
  <span
    class="jsx-1511168735 avatar "
  >
    <span
      class="jsx-1511168735 avatar-text"
    />
  </span>
</div>
`;

exports[`Avatar should render text element 1`] = `
<div>
  <span
    class="jsx-1511168735 avatar "
  >
    <span
      class="jsx-1511168735 avatar-text"
    >
      text
    </span>
  </span>
</div>
`;

exports[`Avatar should stacked when avatars are in a group 1`] = `
<div>
  <div
    class="jsx-3664929776 avatar-group "
  >
    <span
      class="jsx-1511168735 avatar "
    >
      <span
        class="jsx-1511168735 avatar-text"
      />
    </span>
    <span
      class="jsx-1511168735 avatar "
    >
      <span
        class="jsx-1511168735 avatar-text"
      />
    </span>
  </div>
</div>
`;

exports[`Avatar should support square 1`] = `
<div>
  <span
    class="jsx-1513467711 avatar "
  >
    <span
      class="jsx-1513467711 avatar-text"
    />
  </span>
</div>
`;

exports[`Avatar stacked should be work 1`] = `
<div>
  <span
    class="jsx-3088329575 avatar "
  >
    <img
      class="jsx-3088329575 avatar-img"
      src="https://zeit.co/api/www/avatar/?u=evilrabbit&s=160"
    />
  </span>
</div>
`;
